--- a/index.html
+++ b/index.html
@@ -314,9 +314,12 @@
 </div>
 <!-- end of pricings -->
 
-</section>
 
-      <section class="home__section">
+
+
+
+</section>
+      <!-- <section class="home__section">
         <div class="test-head">
           <h2>What People Say</h2>
         </div>
@@ -406,17 +409,16 @@
             </div>
           </div>
         </div>
-      </section>
-
+      </section> -->
 
 
 
 
       <footer class="footer">
         <section class="footer__section_one">
-          <div>
+          <!-- <div>
             <img src="./assets/img/logo-svg.svg" />
-          </div>
+          </div> -->
           <div class="footer__links__wrap">
             <div>
               <h3 class="title__three">Links</h3>
@@ -517,6 +519,7 @@
     </div>
   </body>
   <script language="javascript" src="./assets/js/hamnav.js"></script>
+  <script type="text/javascript" src="../assets/js/contact.js"></script>
 
   <script type="text/javascript">
     $(document).ready(function () {
