--- a/pages/blog.html
+++ b/pages/blog.html
@@ -75,7 +75,9 @@
 
         <div class="blog__posts__wrapper">
           <div class="title__bordered"><h2>Latest Post</h2></div>
-          <div id="post-wrap"></div>
+          <div id="post-wrap">
+            dsad  
+          </div>
         </div>
       </main>
 
@@ -98,7 +100,6 @@
               <img src="../assets/img/down.svg" alt="" />
             </div> -->
             </div>
-
             <div>
               <h3 class="title__three">Our Services</h3>
               <ul class="footer__links__list">
