--- a/pages/blog.html
+++ b/pages/blog.html
@@ -62,16 +62,26 @@
       <div class="back-drop" onclick="toggleanimate()"></div>
 
       <main>
-        <section class="blog__header">
-          <div class="blog__header__content">
-            <div class="title__bordered"><h2>Blog</h2></div>
-            <p>
-              We purse relationships based on transparency, persistence, mutual
-              trust, and integrity with our employees, customers and business
-              partners
-            </p>
+
+
+        <div class="blog__posts__most__recent">
+          <div class="blog__posts__most__recent__image">
+            <img src="/assets/img/dummy2.png"/>
           </div>
-        </section>
+          
+          <div class="blog__posts__most__recent__details">
+            <p>Motiv8 Technologies</p>
+            <h2>Our mission at Okra is to digitize financial services for Africa. We enable developers to build digital financial platforms and services.</h2>
+          
+          <div class="blog__posts__author">
+            <img src="/assets/img/dummy.png"/>
+            <div class="blog__posts__author__details">
+              <span>Ekundayo Stephen Gbenga</span>
+              <span>Apr 19, 2022</span>
+            </div>
+        </div>
+      </div>
+      </div>
 
         <div class="blog__posts__wrapper">
           <div class="title__bordered"><h2>Latest Post</h2></div>
@@ -82,9 +92,6 @@
       <!-- footer -->
       <footer class="footer">
         <section class="footer__section_one">
-          <div>
-            <img src="../assets/img/motiv8 logo.svg" />
-          </div>
           <div class="footer__links__wrap">
             <div>
               <h3 class="title__three">Links</h3>
