--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="service">
-          <img src="./assets/img/hub.svg" alt="design" />
+          <img src="./assets/img/motiv8-academy.svg" alt="design" />
           <h1>Motiv8 Academy</h1>
           <div class="overlay">
             <div class="reverse_colors">
@@ -215,50 +215,7 @@
     </section>
 
 
-    <!-- why choose us -->
-    <!-- <section class="home__choose__us__wrap">
-      <div class="choose-us-head">
-        <h2>Why Choose Us</h2>
-      </div>
-      <div class="home__choose__us__body">
-        <div class="home__choose__us__item">
-          <img src="./assets/img/people-icon.svg" />
 
-          <div>
-            <h2>People</h2>
-            <p>
-              People within the organization need to actually execute on the
-              strategies, plans, and processes to make a business successful
-            </p>
-          </div>
-        </div>
-
-        <div class="home__choose__us__item">
-          <img src="./assets/img/business-icon.svg" />
-
-          <div>
-            <h2>Business</h2>
-            <p>
-              Businesses today are using opportunities presented by technology
-              to escalate growth at low or no overhead cost of technical.
-            </p>
-          </div>
-        </div>
-
-        <div class="home__choose__us__item">
-          <img src="./assets/img/tech-icon.svg" />
-
-          <div>
-            <h2>Technology</h2>
-            <p>
-              With the innovation and ease of use that has come with the usage
-              of technology has made life a lot easier today. Giving not only
-              people competitive.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- Rapid Production -->
     <section class="__work__process home__more__value__wrap">
