--- a/pages/about.html
+++ b/pages/about.html
@@ -59,12 +59,57 @@
             </p>
           </div>
         </div>
+                    <!-- why choose us -->
+    <section class="home__choose__us__wrap">
+      <!-- <div class="choose-us-head">
+        <h2>Why Choose Us</h2>
+      </div> -->
+      <div class="home__choose__us__body">
+        <div class="home__choose__us__item">
+          <img src="/assets/img/people-icon.svg" />
+
+          <div>
+            <h2>People</h2>
+            <p>
+              People within the organization need to actually execute on the
+              strategies, plans, and processes to make a business successful
+            </p>
+          </div>
+        </div>
+
+        <div class="home__choose__us__item">
+          <img src="/assets/img/business-icon.svg" />
+
+          <div>
+            <h2>Business</h2>
+            <p>
+              Businesses today are using opportunities presented by technology
+              to escalate growth at low or no overhead cost of technical.
+            </p>
+          </div>
+        </div>
+
+        <div class="home__choose__us__item">
+          <img src="/assets/img/tech-icon.svg" />
+
+          <div>
+            <h2>Technology</h2>
+            <p>
+              With the innovation and ease of use that has come with the usage
+              of technology has made life a lot easier today. Giving not only
+              people competitive.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
         <section class="about__team__wrap">
           <div class="about__team__text_wrap">
             <h3 class="title__two">Our Great Team</h3>
             <div class="title__two__border"></div>
-            <p>
+            <h4>
               Our team of specialists consistently delivers outstanding results
               combining creative ideas with our vast experience. We can help you
               with your various information technology services to put your
@@ -72,11 +117,11 @@
               offer services like website design, social media marketing, Ppc
               marketing, Graphics design, Networking, and Cyber & Network
               security
-            </p>
+            </h4>
           </div>
-          <div class="about__illus_wrap">
+          <!-- <div class="about__illus_wrap">
             <img src="../assets//img/about01.png" class="about__illus" />
-          </div>
+          </div> -->
         </section>
         <section>
           <div class="about__team__list">
@@ -86,7 +131,7 @@
             <img src="../assets//img/default-team.svg" />
           </div>
         </section>
-        <section class="about__detail about__join__team__section">
+        <!-- <section class="about__detail about__join__team__section">
           <div class="about__join__our__team__layer"></div>
           <div class="about__detail__body">
             <h2 class="title__one">Join Our Team</h2>
@@ -97,16 +142,34 @@
             </p>
             <button class="button">Talk to us</button>
           </div>
-        </section>
+        </section> -->
 
+    <section class="partners__banner">
+      <h2>Our Clientel</h2>
+      <div class="banner__grid">
+        <div class="banner__icon">
+          <img src="/assets/img/dev-icon.svg"/>
+        </div>
+        <div class="banner__icon">
+          <img src="/assets/img/dev-icon.svg"/>
+        </div>
+        <div class="banner__icon">
+          <img src="/assets/img/dev-icon.svg"/>
+        </div>
+        <div class="banner__icon">
+          <img src="/assets/img/dev-icon.svg"/>
+        </div>        
+      </div>
+
+    </section>
         <!-- //contact starts Here’s -->
 
         <section class="contact">
-          <div class="contact__header">
-            <div class="title__bordered"><h2>Contact</h2></div>
-
+    
+          <!-- <div class="contact__title">
+            <h2>Contact</h2>
             <p>Need a hand? Or a high five? Here’s how to reach us.</p>
-          </div>
+          </div> -->
 
           <div class="contact__form__wrap">
             <div class="contact__loc__phone__mail__wrap">
@@ -131,8 +194,8 @@
                 <div class="contact__loc__phone__mail__badge">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
-                <a href="mailto:hello@motiv8technologies.com"
-                  >hello@motiv8technologies.com</a
+                <a href="mailto:motiv8techltd@gmail.com"
+                  >motiv8techltd@gmail.com</a
                 >
                 <a href="mailto:support@motiv8technologies.com"
                   >support@motiv8technologies.com</a
