--- a/pages/about.html
+++ b/pages/about.html
@@ -34,6 +34,9 @@
           <a href="/index.html">
             <div>Home</div>
           </a>
+          <a href="https://www.academy.motiv8technologies.com/">
+            <div>Academy</div>
+          </a>
           <a href="blog.html">
             <div>Blog</div>
           </a>
@@ -54,26 +57,18 @@
     <div class="back-drop" onclick="toggleanimate()"></div>
 
     <main>
-      <!-- <div class="about__header">
-          <div class="about__header__content">
-            <div class="title__bordered"><h2>About Us</h2></div>
-
-            <p>
-              We pursue relationships based on transparency, persistence, mutual
-              trust, and integrity with our employees, customers and other
-              business partners.
-            </p>
-          </div>
-        </div> -->
+      <div class="headings">
+        <h2 style="font-family: Readex Pro;">About Motiv8</h2>
+      </div>
       <section class="intro__brief">
-        <p>We pursue relationships based on transparency, persistence, mutual trust, and integrity with our employees,
-          customers and other business partners.
 
+        <p style="font-family: Readex Pro; font-weight: 100; width: 50%;">We pursue relationships based on transparency, persistence, mutual trust, and integrity with our employees,
+          customers and other business partners.
           Our team of specialists consistently delivers outstanding results combining creative ideas with our vast
           experience. We can help you with your various information technology services to put your business online and
           make everyday business activities easier. we offer services like website design, social media marketing, Ppc
           marketing , Graphics design , Networking, and Cyber & Network security</p>
-        <img src="/assets/img/info-1.png"/>
+        <img src="/assets/img/info-1.png" style="width: 40%; padding: 0 20px;"/>
 
       </section>
       <!-- why choose us -->
@@ -126,7 +121,7 @@
         <div class="about__team__text_wrap">
           <h3 class="title__two">Our Great Team</h3>
           <div class="title__two__border"></div>
-          <h4>
+          <h4 style="color: black; font-weight: 100;">
             Our team of specialists consistently delivers outstanding results
             combining creative ideas with our vast experience. We can help you
             with your various information technology services to put your
@@ -140,14 +135,14 @@
             <img src="../assets//img/about01.png" class="about__illus" />
           </div> -->
       </section>
-      <section>
+      <!-- <section>
         <div class="about__team__list">
           <img src="../assets//img/default-team.svg" />
           <img src="../assets//img/default-team.svg" />
           <img src="../assets//img/default-team.svg" />
           <img src="../assets//img/default-team.svg" />
         </div>
-      </section>
+      </section> -->
       <!-- <section class="about__detail about__join__team__section">
           <div class="about__join__our__team__layer"></div>
           <div class="about__detail__body">
@@ -161,24 +156,7 @@
           </div>
         </section> -->
 
-      <section class="partners__banner">
-        <h2>Our Clientel</h2>
-        <div class="banner__grid">
-          <div class="banner__icon">
-            <img src="/assets/img/dev-icon.svg" />
-          </div>
-          <div class="banner__icon">
-            <img src="/assets/img/dev-icon.svg" />
-          </div>
-          <div class="banner__icon">
-            <img src="/assets/img/dev-icon.svg" />
-          </div>
-          <div class="banner__icon">
-            <img src="/assets/img/dev-icon.svg" />
-          </div>
-        </div>
 
-      </section>
       <!-- //contact starts Here’s -->
 
       <section class="contact">
