--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,27 +66,19 @@
   <div id="modal-background">
     <div id="modal">
       <span id="close-btn">&times;</span>
-  
       <section class="contact__form__section">
-        <div class="contact__form__about__us">
-          <div class="about__us">
-  
-  
-            <div class="contact__form_about__us__location">
-              <img src="/assets/img/location.svg" />
-              <p>77, Opposite Emir's Junction, Bosso Road, Minna. Niger state.</p>
-            </div>
-            <div class="contact__form_about__us__mail">
-              <img src="/assets/img/mail.svg" />
-              <p>motiv8techltd@gmail.com</p>
-            </div>
+        <div class="request__us__header">
+          <div>
+            <h2>Request a Service</h2>
+            <h4>Do you need an IT solution?</h4>
           </div>
-  
         </div>
         <form class="contact__form">
+      
+
           <div class="contact__form__input__wrap">
             <i class="fa fa-user-o" aria-hidden="true"></i>
-            <input placeholder="Your name" class="input" />
+            <input placeholder="Your Name" class="input" />
           </div>
           <div class="contact__form__input__wrap">
             <i class="fa fa-phone" aria-hidden="true"></i>
@@ -96,7 +88,7 @@
             <i class="fa fa-envelope-o" aria-hidden="true"></i>
             <input placeholder="Email Address" type="email" class="input" />
           </div>
-          <div class="contact__form__input__wrap__msg">
+          <div class="contact__form__input__wrap">
             <i class="fa fa-comment-o" aria-hidden="true"></i>
             <textarea placeholder="Type your message here" class="input" rows="5"></textarea>
           </div>
