--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="./pages/index.html" class="header__active">
             <div>Home</div>
           </a>
-          <a href="https://www.academy.motiv8technologies.com/">
+          <a href="https://academy.motiv8technologies.com">
             <div>Academy</div>
           </a>
           <a href="./pages/blog.html">
@@ -78,11 +78,6 @@
         </button> -->
         <!-- <button class="home__hero__button">Talk to us</button> -->
       </div>
-      <!-- <div class="home__hero__image__wrap">
-        <img src="./assets/img/illuses.svg" />
-      </div> -->
-
-
     </section>
 
 
@@ -123,7 +118,7 @@
 
     <section class="services-section">
       <div class="services__heading">
-        <h2>Our Services & Products</h2>
+        <h2 style="color: white;">Our Services & Products</h2>
       </div>
       <div class="container-service-grids">
         <div class="services" data-aos="fade-up">
@@ -152,14 +147,15 @@
           <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
 
           <div class="find__more__button" data-aos="fade-up">
-            <button>
+            <a href="/pages/contact.html">            <button>
               Find out more <svg width="18" height="20" viewBox="0 0 18 20" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M16.3473 7.59657L3.31889 0.156988C2.63578 -0.233117 1.82379 0.128862 1.50521 0.965321L0.928011 2.4799C0.609426 3.31636 0.905043 4.31063 1.58815 4.70074L10.879 10.0054L1.58645 15.3122C0.905042 15.7013 0.610277 16.6929 0.928011 17.5273L1.50308 19.0377C1.82082 19.8721 2.63068 20.233 3.31208 19.844L16.3477 12.4007C16.5825 12.2667 16.7812 12.0533 16.9205 11.7858C17.0597 11.5182 17.1337 11.2076 17.1337 10.8903V9.10751C17.1333 8.45907 16.8271 7.87001 16.3473 7.59657V7.59657Z"
                   fill="white" />
               </svg>
-            </button>
+            </button></a>
+
           </div>
         </div>
         <div class="services" data-aos="fade-up">
@@ -167,14 +163,14 @@
           <h1>Motiv8 Academy</h1>
           <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
           <div class="find__more__button">
-            <button>
+            <a href="https://academy.motiv8technologies.com">            <button>
               Find out more <svg width="18" height="20" viewBox="0 0 18 20" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M16.3473 7.59657L3.31889 0.156988C2.63578 -0.233117 1.82379 0.128862 1.50521 0.965321L0.928011 2.4799C0.609426 3.31636 0.905043 4.31063 1.58815 4.70074L10.879 10.0054L1.58645 15.3122C0.905042 15.7013 0.610277 16.6929 0.928011 17.5273L1.50308 19.0377C1.82082 19.8721 2.63068 20.233 3.31208 19.844L16.3477 12.4007C16.5825 12.2667 16.7812 12.0533 16.9205 11.7858C17.0597 11.5182 17.1337 11.2076 17.1337 10.8903V9.10751C17.1333 8.45907 16.8271 7.87001 16.3473 7.59657V7.59657Z"
                   fill="white" />
               </svg>
-            </button>
+            </button></a>
           </div>
         </div>
     </section>
@@ -241,11 +237,11 @@
         <h2>Our Competitive Advantage</h2>
       </div>
       <div class="home__more__value__body">
-        <div class="home__more__value__hero" data-aos="flip-left">
+        <div class="home__more__value__hero" data-aos="fade-down">
           <img src="./assets/img/more-value.png" />
         </div>
 
-        <div class="home__more__value__content" data-aos="flip-left">
+        <div class="home__more__value__content" data-aos="fade-down-right">
           <h4>
             Our digital services and products can drive more value Into your
             business for growth and service delivery
@@ -459,7 +455,7 @@
       <section class="footer__section__two">
         <div class="footer__copyright">
           <small>
-            &copy 2021 Motiv8 Technologies Limited. All rights reserved
+            &copy 2022 Motiv8 Technologies Limited. All rights reserved
           </small>
         </div>
       </section>
@@ -495,5 +491,6 @@
   });
 </script>
 <script type="text/javascript" src="../assets/js/contact.js"></script>
+<script type="text/javascript" src="/assets/js/dynamic-header.js"></script>
 
 </html>
