--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <section class="services-section">
       <div class="services__heading">
-        <h2 style="color: white;">Our Services & Products</h2>
+        <h2 style="color: black">Our Services & Products</h2>
       </div>
       <div class="container-service-grids">
         <div class="services" data-aos="fade-up">
@@ -207,25 +207,24 @@
           </svg>
           Our Work Process</h2>
       </div>
-      <div class="work__process__content" data-aos="fade-up">
-        <ul>
-          <li>Planning and Design</li>
-          <li>Intense Development</li>
-          <li>Fast Delivery</li>
-          <li>Maintenance</li>
-          <!-- <div>
-            <button>Contact Us <svg width="44" height="44" viewBox="0 0 44 44" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M22 0C27.8348 0 33.4306 2.31785 37.5564 6.44365C41.6822 10.5694 44 16.1652 44 22C44 27.8348 41.6822 33.4305 37.5564 37.5563C33.4306 41.6821 27.8348 44 22 44C16.1652 44 10.5695 41.6821 6.44365 37.5563C2.31785 33.4305 0 27.8348 0 22C0 16.1652 2.31785 10.5694 6.44365 6.44365C10.5695 2.31785 16.1652 0 22 0V0ZM12.375 20.625C12.0103 20.625 11.6606 20.7699 11.4027 21.0277C11.1449 21.2856 11 21.6353 11 22C11 22.3647 11.1449 22.7144 11.4027 22.9723C11.6606 23.2301 12.0103 23.375 12.375 23.375H28.3058L22.4015 29.2765C22.1433 29.5347 21.9983 29.8849 21.9983 30.25C21.9983 30.6151 22.1433 30.9653 22.4015 31.2235C22.6597 31.4817 23.0099 31.6267 23.375 31.6267C23.7401 31.6267 24.0903 31.4817 24.3485 31.2235L32.5985 22.9735C32.7265 22.8458 32.8281 22.694 32.8975 22.527C32.9668 22.3599 33.0025 22.1809 33.0025 22C33.0025 21.8191 32.9668 21.6401 32.8975 21.473C32.8281 21.306 32.7265 21.1542 32.5985 21.0265L24.3485 12.7765C24.0903 12.5183 23.7401 12.3733 23.375 12.3733C23.0099 12.3733 22.6597 12.5183 22.4015 12.7765C22.1433 13.0347 21.9983 13.3849 21.9983 13.75C21.9983 14.1151 22.1433 14.4653 22.4015 14.7235L28.3058 20.625H12.375Z"
-                  fill="#0F2391" />
-              </svg>
+      <div class="work__process__content" data-aos="fade-up" >
+        <div>
+            <h4 style="color: white;"> We archieve the best quality possible with a blend of Planning and Design, Intense Development, Fast Delivery & Maintenance</h4>
+              <div>
+                <button>Get a Quote <svg width="44" height="44" viewBox="0 0 44 44" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M22 0C27.8348 0 33.4306 2.31785 37.5564 6.44365C41.6822 10.5694 44 16.1652 44 22C44 27.8348 41.6822 33.4305 37.5564 37.5563C33.4306 41.6821 27.8348 44 22 44C16.1652 44 10.5695 41.6821 6.44365 37.5563C2.31785 33.4305 0 27.8348 0 22C0 16.1652 2.31785 10.5694 6.44365 6.44365C10.5695 2.31785 16.1652 0 22 0V0ZM12.375 20.625C12.0103 20.625 11.6606 20.7699 11.4027 21.0277C11.1449 21.2856 11 21.6353 11 22C11 22.3647 11.1449 22.7144 11.4027 22.9723C11.6606 23.2301 12.0103 23.375 12.375 23.375H28.3058L22.4015 29.2765C22.1433 29.5347 21.9983 29.8849 21.9983 30.25C21.9983 30.6151 22.1433 30.9653 22.4015 31.2235C22.6597 31.4817 23.0099 31.6267 23.375 31.6267C23.7401 31.6267 24.0903 31.4817 24.3485 31.2235L32.5985 22.9735C32.7265 22.8458 32.8281 22.694 32.8975 22.527C32.9668 22.3599 33.0025 22.1809 33.0025 22C33.0025 21.8191 32.9668 21.6401 32.8975 21.473C32.8281 21.306 32.7265 21.1542 32.5985 21.0265L24.3485 12.7765C24.0903 12.5183 23.7401 12.3733 23.375 12.3733C23.0099 12.3733 22.6597 12.5183 22.4015 12.7765C22.1433 13.0347 21.9983 13.3849 21.9983 13.75C21.9983 14.1151 22.1433 14.4653 22.4015 14.7235L28.3058 20.625H12.375Z"
+                      fill="#0F2391" />
+                  </svg>
+                </button>
+              </div>
 
-            </button>
+        </div>
+        <div>
+          <img src="/assets/img/work_process.svg" data-aos="fade-up" />
+        </div>
 
-          </div> -->
-        </ul>
-        <img src="/assets/img/work_process.svg" data-aos="fade-up" />
       </div>
 
 
