--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,13 +19,14 @@
     />
 
     <script
-      src="https://unpkg.com/react@17/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-      crossorigin
-    ></script>
+    src="../assets/js/react.dev.js"
+    crossorigin
+  ></script>
+  <script
+    src="../assets/js/react-dom.dev.js"
+    crossorigin
+  ></script>
+  <script src="../assets/js/babel.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="../assets/js/component/posts.js" type="text/babel"></script>
   </head>
