--- a/pages/post.html
+++ b/pages/post.html
@@ -19,14 +19,14 @@
     />
 
     <script
-      src="https://unpkg.com/react@17/umd/react.development.js"
+      src="../assets/js/react.dev.js"
       crossorigin
     ></script>
     <script
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+      src="../assets/js/react-dom.dev.js"
       crossorigin
     ></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="../assets/js/babel.min.js"></script>
     <script src="../assets/js/component/post.js" type="text/babel"></script>
   </head>
   <body>
@@ -36,10 +36,8 @@
         <div class="header__bg__layer__blog"></div>
 
         <div class="header__body">
-          <div>
-            <a href="./index.html"
-              ><img src="../assets/img/motiv8 logo.svg"
-            /></a>
+          <div class="header_logo">
+            <a href="/index.html"><img src="/assets/img/logo-svg.svg"/></a>
           </div>
 
           <div class="header__ham" onclick="toggleanimate()">
@@ -49,7 +47,7 @@
           </div>
 
           <div class="header__nav">
-            <a href="index.html"><div>Home</div></a>
+            <a href="/index.html"><div>Home</div></a>
             <a href="blog.html" class="header__active"><div>Blog</div></a>
             <a href="about.html"> <div>About</div></a>
             <a href="contact.html"><div>Contact</div></a>
@@ -64,7 +62,7 @@
       <div class="back-drop" onclick="toggleanimate()"></div>
 
       <main>
-        <section class="blog__header">
+        <!-- <section class="blog__header">
           <div class="blog__header__content">
             <div class="title__bordered"><h2>Blog</h2></div>
 
@@ -74,7 +72,7 @@
               partners
             </p>
           </div>
-        </section>
+        </section> -->
 
         <div class="blog__posts__wrapper">
           <div id="post-wrap"></div>
@@ -85,7 +83,7 @@
       <footer class="footer">
         <section class="footer__section_one">
           <div>
-            <img src="../assets/img/motiv8 logo.svg" />
+            <!-- <img src="../assets/img/motiv8 logo.svg" /> -->
           </div>
           <div class="footer__links__wrap">
             <div>
