the beginning of responsiveness

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/slick.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/slick-theme.css" />
   <link rel="stylesheet" href="/assets/css/aos.css" />
+  <link rel="stylesheet" href="/assets/css/responcive.css" />
+
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./assets/js/jquery.min.js"></script>
@@ -27,8 +29,10 @@
 
 <body>
   <div id="main">
-    <header class="header">
-      <div class="header__bg__layer"></div>
+    <div class="hero-bg">
+    <header class="header ">
+      
+      <!-- <div class="header__bg__layer"></div> -->
       <div class="header__body">
         <div class="header_logo">
           <a href="/index.html"><img src="./assets/img/logo-svg.svg" /></a>
@@ -59,6 +63,7 @@
           </div>
         </div>
       </div>
+  
     </header>
     <div class="back-drop" onclick="toggleanimate()"></div>
     <!-- landing page -->
@@ -78,8 +83,9 @@
         </button> -->
         <!-- <button class="home__hero__button">Talk to us</button> -->
       </div>
+    
     </section>
-
+</div>
 
     <!--Our Services -->
     <!-- <section class="__work__process home__service">
@@ -491,5 +497,6 @@
 </script>
 <script type="text/javascript" src="../assets/js/contact.js"></script>
 <script type="text/javascript" src="/assets/js/dynamic-header.js"></script>
+<script src="./assets/js/custom.js"></script>
 
 </html>
