--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,10 @@
   <link type="text/css" href="../assets/css/header.css" rel="stylesheet" />
   <link type="text/css" href="../assets/css/footer.css" rel="stylesheet" />
   <link type="text/css" href="../assets/css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../assets/css/responcive.css" />
+
+  <script src="../assets/js/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -292,5 +296,6 @@
   </div>
 </body>
 <script language="javascript" src="../assets/js/hamnav.js"></script>
+<script src="../assets/js/custom.js"></script>
 
 </html>
