--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,12 +12,14 @@
     <link type="text/css" href="../assets/css/footer.css" rel="stylesheet" />
     <link type="text/css" href="../assets/css/contact.css" rel="stylesheet" />
     <link type="text/css" href="../assets/css/blog.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/css/responcive.css" />
+
     <link
       type="text/css"
       href="../assets/css/font-awesome.min.css"
       rel="stylesheet"
     />
-
+    <script src="../assets/js/jquery.min.js"></script>
     <script
     src="../assets/js/react.dev.js"
     crossorigin
@@ -34,25 +36,31 @@
     <div id="main">
       <!-- header -->
       <header class="header">
-        <div class="header__bg__layer__blog"></div>
-
+        <div class="header__bg__layer__about"></div>
         <div class="header__body">
           <div class="header_logo">
-            <a href="/index.html"><img src="/assets/img/logo-svg.svg"/></a>
+            <a href="/index.html"><img src="/assets/img/logo-svg.svg" /></a>
           </div>
-
+  
           <div class="header__ham" onclick="toggleanimate()">
             <div class="nav-bar"></div>
             <div class="nav-bar"></div>
             <div class="nav-bar"></div>
           </div>
-
+  
           <div class="header__nav">
-            <a href="/index.html"><div>Home</div></a>
-            <a href="blog.html" class="header__active"><div>Blog</div></a>
-            <a href="about.html"> <div>About</div></a>
-            <a href="contact.html"><div>Contact</div></a>
-
+            <a href="/index.html">
+              <div>Home</div>
+            </a>
+            <a href="https://www.academy.motiv8technologies.com/">
+              <div>Academy</div>
+            </a>
+            <a href="blog.html">
+              <div>Blog</div>
+            </a>
+            <a href="about.html" class="header__active">
+              <div>About</div>
+            </a>
             <div class="header__phone__number__wrap">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <a href="callto:+23470000668488">070000668488</a>
@@ -193,4 +201,6 @@
     </div>
   </body>
   <script language="javascript" src="../assets/js/hamnav.js"></script>
+<script src="../assets/js/custom.js"></script>
+
 </html>
