--- a/pages/about.html
+++ b/pages/about.html
@@ -23,8 +23,8 @@
 <body>
   <div id="main">
     <header class="header">
-      <div class="header__bg__layer__about"></div>
-      <div class="header__body">
+     <!-- <div class="header__bg__layer__about"></div> -->
+     <div class="header__body header__bg__layer__about">
         <div class="header_logo">
           <a href="/index.html"><img src="/assets/img/logo-svg.svg" /></a>
         </div>
