--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="header__nav">
-          <a href="./pages/index.html" class="header__active">
+          <a href="./index.html" class="header__active">
             <div>Home</div>
           </a>
           <a href="https://academy.motiv8technologies.com">
@@ -153,7 +153,7 @@
           <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
 
           <div class="find__more__button" data-aos="fade-up">
-            <a href="/pages/contact.html">            <button>
+            <a href="/pages/hub.html"><button>
               Find out more <svg width="18" height="20" viewBox="0 0 18 20" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
