--- a/pages/post.html
+++ b/pages/post.html
@@ -36,8 +36,8 @@
     <div id="main">
       <!-- header -->
       <header class="header">
-        <div class="header__bg__layer__about"></div>
-        <div class="header__body">
+        <!-- <div class="header__bg__layer__about"></div> -->
+        <div class="header__body header__bg__layer__about">
           <div class="header_logo">
             <a href="/index.html"><img src="/assets/img/logo-svg.svg" /></a>
           </div>
