responcive to responsive

--- a/pages/hub.html
+++ b/pages/hub.html
@@ -15,7 +15,7 @@
   <link type="text/css" href="../assets/css/footer.css" rel="stylesheet" />
   <link type="text/css" href="../assets/css/contact.css" rel="stylesheet" />
   <link type="text/css" href="../assets/css/font-awesome.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/responcive.css" />
+  <link rel="stylesheet" href="../assets/css/responsive.css" />
 
 
   <script src="../assets/js/jquery.min.js"></script>
