--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/slick.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/slick-theme.css" />
   <link rel="stylesheet" href="/assets/css/aos.css" />
-  <link rel="stylesheet" href="/assets/css/responcive.css" />
+  <link rel="stylesheet" href="/assets/css/responsive.css" />
 
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
