--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
   <link type="text/css" href="../assets/css/header.css" rel="stylesheet" />
   <link type="text/css" href="../assets/css/footer.css" rel="stylesheet" />
   <link type="text/css" href="../assets/css/font-awesome.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/responcive.css" />
+  <link rel="stylesheet" href="../assets/css/responsive.css" />
 
   <script src="../assets/js/jquery.min.js"></script>
 
