--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,7 +12,7 @@
     <link type="text/css" href="../assets/css/footer.css" rel="stylesheet" />
     <link type="text/css" href="../assets/css/contact.css" rel="stylesheet" />
     <link type="text/css" href="../assets/css/blog.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../assets/css/responcive.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
 
     <link
       type="text/css"
