--- a/pages/hub.html
+++ b/pages/hub.html
@@ -139,11 +139,14 @@
             <span>No internet</span>
           </div>
           <div class="price__plans__cards">
-            <h3>N1000</h3>
             <h2>Active WorkSpace</h2>
-            <span>Electricity</span>
+            <h3>N1000</h3>
+            <div class="bttm">
+            <h4>A comfortable space for you to work your freelance without distraction and noise</h4>
+          </div>
+            <span style="margin-top: 30px;">Electricity</span>
             <span>Work Desk</span>
-            <span>Internet</span>
+            <span>Fast internet</span>
           </div>
         </div>
       </section>
