--- a/pages/projects.html
+++ b/pages/projects.html
@@ -180,13 +180,18 @@
         <div class="service" >
           <img src="/assets/img/velma_arc.png"/>
           <h1>Velma</h1>
+          <h3>Web Development</h3>
+        </div>
+        <div class="service" >
+          <img src="/assets/img/marbill card.jpg"/>
+          <h1>Marbills</h1>
           <h3>Branding</h3>
         </div>
 
     </section>
     </section>
        <!-- Modal Background and Modal -->
-  <div id="modal-background">
+  <!-- <div id="modal-background">
     <div id="modal">
         <span id="close-btn">&times;</span>
         <div class="request__us__header">
@@ -216,7 +221,7 @@
         </form>
   
     </div>
-  </div>
+  </div> -->
 
     <div class="contact">
       <a class="header__active" id="open-btn">
