--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
         </div>
         <div class="work__process__content" data-aos="fade-up">
           <div>
-            <h4 style="color: white;"> We archieve the best quality possible with a blend of Planning and Design,
-              Intense Development, Fast Delivery & Maintenance</h4>
+            <h4 style="color: white;"> We value you, so we listen to you first, that way we are able to put your best foot forward.
+              Our team of experts brainstorm to turn your unique idea into scaleable products
+              We work collaboratively with you in the prototyping and final phase to ensure we deliver only the best</h4>
             <div>
               <button>Get a Quote <svg width="44" height="44" viewBox="0 0 44 44" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
