--- a/pages/projects.html
+++ b/pages/projects.html
@@ -30,17 +30,22 @@
 <body>
   <div id="main">
     <div class="hero-bg"></div>
+    
     <header class="header ">
       <style>
         .header__nav > a{
           color: #112791 !important;
+
+       }
+       .nav-bar {
+           background-color: #2100f8;
        }
       </style>
       <div class="h-regular"></div>
       <!-- <div class="header__bg__layer"></div> -->
       <div class="header__body ">
         <div class="header_logo">
-          <a href="/index.html"><img src="../assets/img/logo-svg.svg" /></a>
+          <a href="/index.html"><img src="../assets/img/logo/m8-logo-blue.png" /></a>
         </div>
 
         <div class="header__ham" onclick="toggleanimate()">
@@ -68,9 +73,9 @@
           <a href="/pages/about.html">
             <div>About</div>
           </a>
-          <div class="header__phone__number__wrap" style="padding: 4px 10px; background-color:white; color :blue ; border-radius:50px">
+          <div class="header__phone__number__wrap" style="padding: 4px 10px; background-color:#2100f8; color :blue ; border-radius:50px">
             <!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
-            <a href="callto:+23470000668488" style="color :blue">Contact us</a>
+            <a href="callto:+23470000668488" style="color :rgb(255, 255, 255)">0700 0066 8488</a>
           </div>
         </div>
       </div>
